Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4610

Fix HTTP and HTTP2 stats

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • HTTP, HTTP/2, Metrics
    • None

    Description

      There are a number of problems with HTTP and HTTP2 stats. Some were introduced with TS-3612. Other problems appear to predate those changes.

      proxy.process.http.current_client_transactions was not being adequately decremented. With this fix it now corresponds to the number of active HttpSMs.
      proxy.process.http2.current_client_sessions wasn't being set accurately.
      proxy.process.http2.total_client_streams wasn't being set at all.

      Originally had the Http2 logic adjusting proxy.process.http.current_client_connections and proxy.process.http.total_client_connections. But decided to pull that out and just have it adjust the http2 versions of those stats. So proxy.process.http connection stats just refer to HTTP/1.x protocols (and SPDY) and proxy.process.http2 connection stats refer to HTTP/2 protocols. This gives monitoring and analysis tools the option to look at connections per protocol.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: