TS-4610 Fixes HTTP and HTTP2 stats

This closes #763

(cherry picked from commit 8c44ecf436137b7d8389fd75544fd410caa1455b)

 Conflicts:
	proxy/http/HttpSM.cc